Project

General

Profile

Actions

Fix #51599

closed

rgw: cleanup virtual dtor decls and defns

Added by Kaleb KEITHLEY almost 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

working on zipper loadable modules reveals issues with dtors in several classes.

These manifest as undefined references to vtable and typeinfo when linking librgw.so.

(Note: you won't see these until more zipper work is merged.)

This is due to:
  • some classes don't declare a dtor at all
  • some classes don't declare the dtor as virtual
  • some classes define the dtor inline in the decl in the .h
  • some classes don't have a defn at all
  • etc.
Actions #1

Updated by Kaleb KEITHLEY almost 3 years ago

  • Project changed from devops to rgw
Actions #2

Updated by Casey Bodley over 2 years ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF