src/rgw/services/svc_tier_rados.cc
@@ -5,6 +5,8 @@
 
 const std::string MP_META_SUFFIX = ".meta";
 
+MultipartMetaFilter::~MultipartMetaFilter() {}
+
 bool MultipartMetaFilter::filter(const string& name, string& key) {
   // the length of the suffix so we can skip past it
   static const size_t MP_META_SUFFIX_LEN = MP_META_SUFFIX.length();
